- JavaFX client launching in JDK 1.8 :-)