@@ -1,10 +1,10 @@
+import de.dynamicfiles.projects.gradle.plugins.javafx.tasks.JfxJarTask
 
 buildscript {
 
     apply( from = "common.gradle.kts")
 
     val kotlinVersion             : String by extra
-    val javaFxGradlePlugin        : String by extra
     val kotlinSerializationPlugin : String by extra
 
     repositories {
@@ -21,7 +21,7 @@ buildscript {
     }
 
     dependencies {
-        classpath(javaFxGradlePlugin)
+        classpath("de.dynamicfiles.projects.gradle.plugins:javafx-gradle-plugin:8.8.2")
         classpath(kotlin("gradle-plugin", version = kotlinVersion))
         classpath(kotlinSerializationPlugin)
         classpath("no.tornado:fxlauncher-gradle-plugin:1.0.15")
@@ -51,30 +51,25 @@ val sharedProject       : ()->ProjectDependency by extra
 
 //val moduleName = "exampleApp"
 
+apply( plugin = "javafx-gradle-plugin" )
+
 plugins {
 
     id("application")
-    id("org.openjfx.javafxplugin") version "0.0.7"
-    id("org.beryx.jlink") version "2.9.4"
+    //id("javafx-gradle-plugin")
 
     kotlin("jvm" ) version "1.3.40"
     id("kotlinx-serialization") version "1.3.40"
     //id("no.tornado.fxlauncher") version "1.0.15"
 }
 
-
-
-//compileKotlin {
-//    kotlinOptions.jvmTarget = "1.8"
-//}
-
-//fxlauncher {
-//    applicationVendor = "Tornado"
-//    applicationUrl = "http://tornadofx.tornado.no/kitchensink/"
-//    applicationMainClass = "tornadofx.kitchensink.app.KitchenSinkApp"
-//    acceptDowngrade = false
-//    //deployTarget = "w144768@tornadofx.tornado.no:www/kitchensink"
-//}
+tasks.withType<JfxJarTask> {
+//    // minimal requirement for jfxJar-task
+//    mainClass("full.qualified.nameOf.TheMainClass")
+//
+//    // minimal requirement for jfxNative-task
+//    vendor = "org.chrishatton"
+}
 
 application {
     mainClassName = "org.chrishatton.example.ExampleApp"
@@ -85,42 +80,9 @@ tasks.withType<JavaCompile> {
     group   = "org.chrishatton.example"
     version = "1.0"
 
-    //ext["moduleName"] = moduleName
+    sourceCompatibility = JavaVersion.VERSION_1_8.toString()
+    targetCompatibility = JavaVersion.VERSION_1_8.toString()
 
-    sourceCompatibility = JavaVersion.VERSION_11.toString()
-    targetCompatibility = JavaVersion.VERSION_11.toString()
-
-    //inputs.property("moduleName", ext["moduleName"])
-
-    doFirst {
-        println()""
-        options.compilerArgs = listOf(
-                "--module-path", classpath.asPath,
-                "--add-modules", listOf("javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.base").joinToString(",")
-        )
-        classpath = files()
-    }
-}
-
-tasks.withType<Jar> {
-//    inputs.property("moduleName", moduleName)
-//    manifest {
-//        attributes("Automatic-Module-Name" to moduleName)
-//    }
-}
-
-/**
- * @see [OpenJFX Docs](https://openjfx.io/openjfx-docs/))
- */
-javafx {
-    version = "11"
-    modules("javafx.controls", "javafx.fxml", "javafx.graphics", "javafx.base")
-}
-
-jlink {
-    launcher {
-        name = "org.chrishatton.example"
-    }
 }
 
 repositories {
@@ -129,10 +91,6 @@ repositories {
     maven( url = "https://kotlin.bintray.com/kotlinx" )
     maven( url = "https://kotlin.bintray.com/kotlin/ktor" )
 }
-
-//tasks.register("clean", Delete::class) {
-//    delete(rootProject.buildDir)
-//}
 
 dependencies {
 
@@ -143,20 +101,6 @@ dependencies {
 
     // Kotlin Core
     implementation(kotlinXCoroutinesCore)
-
-    // JavaFX
-    val currentOS = org.gradle.internal.os.OperatingSystem.current()
-    val javaFxPlatformId : String = when {
-        currentOS.isWindows -> "win"
-        currentOS.isLinux   -> "linux"
-        currentOS.isMacOsX  -> "mac"
-        else                -> throw Exception("Unsupported OS ${currentOS.name}")
-    }
-
-    api("$javaFxBase:$javaFxPlatformId")
-    api("$javaFxGraphics:$javaFxPlatformId")
-    api("$javaFxControls:$javaFxPlatformId")
-    api("$javaFxFxml:$javaFxPlatformId")
 
     implementation(tornadoFx)
 
@@ -169,23 +113,3 @@ dependencies {
     testImplementation(kotlin("test"))
     testImplementation(kotlin("test-junit"))
 }
-
-
-///=========
-
-
-
-/*
-task run(type: JavaExec) {
-    classpath sourceSets.main.runtimeClasspath
-            main = "main.Main"
-}
-
-
-
-task createJar(type: Copy) {
-    dependsOn 'jar'
-    into "$buildDir/libs"
-    from configurations.runtime
-}
-*/
